--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~font-awesome/scss/font-awesome';
+
+
+html, body {
+    height:100%;
+}
+body {
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
+}
