--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,3 +9,8 @@ body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
 }
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
+
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
