Alinhamento entre o header e footer

--- a/src/app/components/template/header/header.component.html
+++ b/src/app/components/template/header/header.component.html
@@ -1,7 +1,7 @@
 
 <nav  class="flex-container">
     <a href="#">
-        <img src="assets/img/netflixx.png" width="90px" alt="logo">
+        <img src="assets/img/netflixx.png" width="90px" style="margin-left: 20px;" alt="logo">
     </a>
     
 
@@ -9,12 +9,12 @@
         <div class="col">
           <div ngbDropdown class="d-inline-block">
             <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>Navegar</button>
-            <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-              <button ngbDropdownItem>Início</button>
-              <button ngbDropdownItem>Séries</button>
-              <button ngbDropdownItem>Filmes</button>
-              <button ngbDropdownItem>Bombando</button>
-              <button ngbDropdownItem>Minha lista</button>
+            <div ngbDropdownMenu aria-labelledby="dropdownBasic1" style=" background-color: black !important;">
+              <button ngbDropdownItem class="button-caixa" style=" border-top: 2px solid white;" >Início</button>
+              <button ngbDropdownItem class="button-caixa" >Séries</button>
+              <button ngbDropdownItem class="button-caixa" >Filmes</button>
+              <button ngbDropdownItem class="button-caixa" >Bombando</button>
+              <button ngbDropdownItem class="button-caixa" >Minha lista</button>
             </div>
           </div>
         </div>
@@ -49,9 +49,8 @@
             <i class="fa fa-bell" style="color:white;"></i>
         </a>
         <a href="#">
-            <img src="assets/img/gatinho.png" alt="icone">
+            <img src="assets/img/gatinho.png" style="margin-right: 20px;" alt="icone">
         </a>
     </div>
-    
 </nav>
    
