--- a/src/app/components/template/header/header.component.html
+++ b/src/app/components/template/header/header.component.html
@@ -52,5 +52,18 @@
             <img src="assets/img/gatinho.png" style="margin-right: 20px;" alt="icone">
         </a>
     </div>
+    <!-- <div id="dropdown-image" class="btn-group" ngbDropdown role="group" aria-label="Button group with nested dropdown">
+        <button class="btn" ngbDropdownToggle><img src="assets/img/gatinho.png" style="margin-right: 20px; color:blueviolet;" alt="icone"></button>
+        <div class="dropdown-menu" ngbDropdownMenu>
+          <button ngbDropdownItem class="button-box-img">            <img src="assets/img/gatinho.png" style="margin-right: 20px;" alt="icone">
+            One</button>
+          <button ngbDropdownItem class="button-box-img">            <img src="assets/img/gatinho.png" style="margin-right: 20px;" alt="icone">
+            Two</button>
+          <button ngbDropdownItem class="button-box-img">            <img src="assets/img/gatinho.png" style="margin-right: 20px;" alt="icone">
+            Four!</button>
+            <button ngbDropdownItem class="button-box-img">            <img src="assets/img/gatinho.png" style="margin-right: 20px;" alt="icone">
+                Four!</button>
+        </div>
+      </div> -->
 </nav>
    
