--- a/src/app/components/template/header/header.component.scss
+++ b/src/app/components/template/header/header.component.scss
@@ -127,6 +127,28 @@ ul {
     text-align: center 
 }
 
+//dropdown image
+
+#dropdown-image .dropdown-toggle::after {
+    display: inline-block;
+    margin-left: 0.255em;
+    vertical-align: 0.255em;
+    content: "";
+    border-top: 0.3em solid;
+    border-right: 0.3em solid transparent;
+    border-bottom: 0;
+    border-left: 0.3em solid transparent;
+    color: #fff;
+
+   
+}
+
+.button-box-img {
+    background-color: rgb(20,20,20);
+    color: #fff;
+}
+
+
 
 // Responsividade  
 
