--- a/src/app/components/template/header/header.component.scss
+++ b/src/app/components/template/header/header.component.scss
@@ -1,12 +1,8 @@
-
-
 .flex-container{
     display: flex;
-    // padding: 10px 20px 10px 20px;
     background-color: #141414;
     width: 100%;
     flex-direction: row;
-    /* justify-content: space-around; */
 }
 
 img {
@@ -16,156 +12,14 @@ img {
    
 }
 
-ul {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
+.header-logo {
+
+}
+
+.header-menu {
     flex-grow: 1;
-    width: 100%;
-    a {
-        text-decoration: none;
-        color:#fff;
-       padding: 5px 10px; 
-       font-size:14px;
-    }
-    a:hover {
-        color: #e5e5e5;
-    }
-    
-    .lista {
-        color: #fff;
-        list-style: none;
-        margin-top:16px;
-    }
-
-    .active a{
-        color: white;
-        font-weight: 500;
-    }
 }
 
- .secondary-navigation {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    a {
-        padding: 5px 10px;
-    }
-} 
-
-
-.button-footer {
-    border: none;
-    background-color: transparent;
-    outline: none;
-}
-
-.nav li {
-    list-style: none;
-    padding: 16px 0;
-}
-
-// Menu Dropdown
-
-.col {
-    flex-basis: 0;
-    flex-grow: 1;
-    max-width: 100%;
-    margin-top: 6px;
-
-}
-
-.btn-outline-primary {
-    color: #fff !important;
-    border-color: transparent !important;
-}
-
-.btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active, .show > .btn-outline-primary.dropdown-toggle {
-    color: #fff;
-    background-color: transparent !important;
-    border-color: transparent !important;
-}
-
-.btn-outline-primary:hover {
-    color: #fff;
-    background-color: transparent !important; 
-    border-color: transparent !important;
-    border: transparent !important;
-}
-
-.btn-outline-primary:focus, .btn-outline-primary.focus {
-     box-shadow: none !important;
-}
-
-.btn-outline-primary {
-    font-size: 11px;
-    margin-top: 5px;
-}
-
-
-.dropdown-item {
-    display: block;
-    width: 100%;
-    padding: 0.25rem 1.5rem;
-    clear: both;
-    font-weight: 400;
-    color: #212529;
-    text-align: inherit;
-    white-space: nowrap;
-    background-color: transparent;
-    border: 0;
-}
-   
-.dropdown-item:hover, .dropdown-item:focus {
-    color: white !important;
-    text-decoration: none;
-     background-color: rgba(255,255,255,.05) !important; 
-}
-
-.button-caixa {
-    color: white !important;
-    text-align: center 
-}
-
-//dropdown image
-
-#dropdown-image .dropdown-toggle::after {
-    display: inline-block;
-    margin-left: 0.255em;
-    vertical-align: 0.255em;
-    content: "";
-    border-top: 0.3em solid;
-    border-right: 0.3em solid transparent;
-    border-bottom: 0;
-    border-left: 0.3em solid transparent;
-    color: #fff;
-
-   
-}
-
-.button-box-img {
-    background-color: rgb(20,20,20);
-    color: #fff;
-}
-
-
-
-// Responsividade  
-
-
-@media (min-width: 885px) {
- .row, .cow, .d-inline-block, .btn, .btn-outline-primar {
-     display: none;
- }
- 
-   
-}
-@media (max-width: 885px) {
-    .lista {
-        padding: 0;
-        margin: 0 20px;
-        transition: 0.3s ease;
-        display: none;
-    }
+.header-actions {
 
 }
