--- a/src/app/components/template/header/menu-action/menu-action.component.scss
+++ b/src/app/components/template/header/menu-action/menu-action.component.scss
@@ -256,8 +256,19 @@
   background-color: #fff !important;
 }
 
+.menu-action-item {
+  margin-top: 20px;
+}
+
+.border-action-item {
+  border-top: solid 1px rgba(255,255,255,.25);
+  margin-top: 15px;
+}
 
 
+.menu-itens {
+  padding-bottom: 5px;
+}
 
 // Responsividade  
 
