Ajuste na interface

--- a/src/app/components/template/footer/footer.component.scss
+++ b/src/app/components/template/footer/footer.component.scss
@@ -3,6 +3,7 @@
     background-color: #141414;
     flex-direction: column;
     width: 100%;
+    
    
     // padding-left: 160px; 
     // padding: 10px 20px 10px 20px;
@@ -20,6 +21,12 @@
 
 }
 
+
+.container-footer[_ngcontent-aki-c104] .container-inner[_ngcontent-aki-c104] {
+    max-width: 100%;
+    padding: 0 25px;
+    margin: 0 auto;
+}
 
 .icons-footer {
     font-size:30px;
