--- a/src/app/components/template/header/header.component.scss
+++ b/src/app/components/template/header/header.component.scss
@@ -3,7 +3,12 @@
     background-color: #141414;
     width: 100%;
     flex-direction: row;
+    // max-width: 900px;
+    // padding: 0;
+    // margin: 0 auto;
 }
+
+
 
 img {
     vertical-align: middle;
