--- a/src/app/components/template/header/menu-action/menu-action.component.html
+++ b/src/app/components/template/header/menu-action/menu-action.component.html
@@ -25,17 +25,20 @@
                 <a>Gerenciar perfis</a>
             </div>
             <div class="border-action-item">
+            <div class="border-action-item"></div>
+              <ul style="padding-left: 0px;">
+                <li class="menu-itens">
+                  <a>Conta</a>
+                </li>
+                <li class="menu-itens">
+                  <a>Centro de ajuda</a>
+                </li>
+                <li class="menu-itens">
+                  <a>Sair da Netflix</a>
+                </li>
+              </ul>
             </div>
-            <div class="menu-itens">
-                <a>Conta</a> 
-            </div>
-            <div class="menu-itens">
-                <a>Centro de ajuda</a> 
-            </div>
-            <div>
-                <a>Sair da Netflix</a>            
-            </div>
-            <hr>
+          
             <div #arrow id="arrow" data-popper-arrow></div>
         </div>
     </div>
