--- a/src/app/components/template/header/menu/menu.component.scss
+++ b/src/app/components/template/header/menu/menu.component.scss
@@ -26,6 +26,10 @@ ul {
     }
 }
 
+.container-menu {
+    width: 100%;
+}
+
  .secondary-navigation {
     display: flex;
     align-items: center;
