Criação das rotas dos componentes

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,71 +1,1 @@
- <!-- <!DOCTYPE html>
-<html>
-  <head>
-    <title>Popper Tutorial</title>
-    <style>
-      #tooltip {
-        background: #333;
-        color: white;
-        font-weight: bold;
-        padding: 4px 8px;
-        font-size: 13px;
-        border-radius: 4px;
-        /* display: none; */
-      }
-
-      #tooltip[data-show] {
-        display: block;
-      }
-
-      #arrow,
-      #arrow::before {
-        position: absolute;
-        width: 8px;
-        height: 8px;
-        background: inherit;
-      }
-
-      #arrow {
-        visibility: hidden;
-      }
-
-      #arrow::before {
-        visibility: visible;
-        content: '';
-        transform: rotate(45deg);
-      }
-
-      #tooltip[data-popper-placement^='top'] > #arrow {
-        bottom: -4px;
-      }
-
-      #tooltip[data-popper-placement^='bottom'] > #arrow {
-        top: -4px;
-      }
-
-      #tooltip[data-popper-placement^='left'] > #arrow {
-        right: -4px;
-      }
-
-      #tooltip[data-popper-placement^='right'] > #arrow {
-        left: -4px;
-      }
-    </style>
-  </head>
-  <body>
-    <button #button (click)="toogleTag()" id="button" aria-describedby="tooltip">My button</button>
-    <div #tooltip id="tooltip" [ngClass]="{show: showMe}"  role="tooltip">
-      My tooltip
-      <div #arrow id="arrow" data-popper-arrow></div>
-    </div>
-    <div>
-        <button aria-describedby="tooltip">My button</button>
-
-    </div>
-
-     [ngClass]="{'d-none': false}"  --> 
-    <!-- *ngIf="showMe" -->
-<!-- 
-     
-  </body>
-</html>  -->
+<p>Home works!</p>
