--- a/src/app/components/template/header/menu/menu.component.html
+++ b/src/app/components/template/header/menu/menu.component.html
@@ -3,34 +3,31 @@
         <div class="col">
           <div ngbDropdown class="d-inline-block">
             <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>Navegar</button>
-            <div ngbDropdownMenu aria-labelledby="dropdownBasic1" style=" background-color: black !important;">
-              <button ngbDropdownItem class="button-caixa" style=" border-top: 2px solid white;" >Início</button>
-              <button ngbDropdownItem class="button-caixa" >Séries</button>
-              <button ngbDropdownItem class="button-caixa" >Filmes</button>
-              <button ngbDropdownItem class="button-caixa" >Bombando</button>
-              <button ngbDropdownItem class="button-caixa" >Minha lista</button>
+            <div ngbDropdownMenu aria-labelledby="dropdownBasic1" class="dropdown-list">
+              <a ngbDropdownItem class="button-caixa" [routerLink]="['/browse']" routerLinkActive="active-link" class="first-of-list">Início</a>
+              <a ngbDropdownItem class="button-caixa" [routerLink]="['/series']" routerLinkActive="active-link">Séries</a>
+              <a ngbDropdownItem class="button-caixa" [routerLink]="['/films']" routerLinkActive="active-link">Filmes</a>
+              <a ngbDropdownItem class="button-caixa" [routerLink]="['/latest']" routerLinkActive="active-link">Bombando</a>
+              <a ngbDropdownItem class="button-caixa" [routerLink]="['/myList']" routerLinkActive="active-link">Minha lista</a>
             </div>
           </div>
         </div>
     </div>
     <ul id="nav">
-    
-        <!-- <li class="menu-navegation">
-        </li> -->
-        <li class="lista" [class]="{'active': menu == 'home'}">
-            <a [routerLink]="['/home']" (click)="selecioneMenu('home')">Início</a>
+        <li class="lista">
+            <a [routerLink]="['/browse']" routerLinkActive="active-link">Início</a>
         </li>
-        <li class="lista" [class]="{'active': menu == 'series'}" >
-            <a [routerLink]="['/series']" (click)="selecioneMenu('series')">Séries</a>
+        <li class="lista" >
+            <a [routerLink]="['/series']">Séries</a>
         </li>
-        <li class="lista" [class]="{'active': menu == 'filmes'}">
-            <a [routerLink]="['/filmes']" (click)="selecioneMenu('filmes')">Filmes</a>
+        <li class="lista">
+            <a [routerLink]="['/films']" >Filmes</a>
         </li>
-        <li class="lista" [class]="{'active': menu == 'bombando'}">
-            <a [routerLink]="['/bombando']" (click)="selecioneMenu('bombando')">Bombando</a>
+        <li class="lista">
+            <a [routerLink]="['/latest']">Bombando</a>
         </li>
-        <li class="lista" [class]="{'active': menu == 'lista'}">
-            <a [routerLink]="['/navegando']"(click)="selecioneMenu('lista')">Minha lista</a>
+        <li class="lista" >
+            <a [routerLink]="['/myList']">Minha lista</a>
         </li>
     </ul>
 </div>
