Inclusão do vídeo na página home, alteração do background do menu

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,5 @@
-<p>Home works!</p>
+<div>
+  <img id="imgTrailer" [ngClass]="{hidden: showVideo == true}" src="assets/img/trailer.jpg" alt="trailer">
+  <video id="homeVideo" [ngClass]="{hidden: showVideo == false}" #homeVideo style="width: 100%;">
+  </video>
+</div>
