--- a/src/app/components/template/header/header.component.html
+++ b/src/app/components/template/header/header.component.html
@@ -1,5 +1,5 @@
 
-<nav  class="flex-container">
+<nav [ngClass]="{fundo: fundoFixo}" class="flex-container">
     <div class="header-logo">
         <a href="#">
             <img src="assets/img/netflixx.png" width="90px" style="margin-left: 20px;" alt="logo">
