--- a/src/app/components/template/header/header.component.scss
+++ b/src/app/components/template/header/header.component.scss
@@ -1,11 +1,17 @@
 .flex-container{
     display: flex;
-    background-color: #141414;
+    background-color: transparent;
+    background-image: linear-gradient(to bottom,rgba(0,0,0,.7) 10%,rgba(0,0,0,0));
     width: 100%;
     flex-direction: row;
+    position: fixed;
     // max-width: 900px;
     // padding: 0;
     // margin: 0 auto;
+    z-index: 1;
+    &.fundo {
+        background-color: #141414;
+    }
 }
 
 
