--- a/src/app/components/template/header/menu-action/menu-action.component.html
+++ b/src/app/components/template/header/menu-action/menu-action.component.html
@@ -6,9 +6,6 @@
         <a href="#" >
             <i class="fa fa-bell" style="color:white;"></i>
         </a>
-        <!-- <a href="#">
-            <img src="assets/img/gatinho.png" style="margin-right: 20px;" alt="icone">
-        </a> -->
     </div>
     <div class="button-action">
         <button #button (click)="toogleTag()" id="button" aria-describedby="tooltip"> 
@@ -28,31 +25,17 @@
             <div class="border-action-item"></div>
               <ul style="padding-left: 0px;">
                 <li class="menu-itens">
-                  <a>Conta</a>
+                  <a href="#">Conta</a>
                 </li>
                 <li class="menu-itens">
-                  <a>Centro de ajuda</a>
+                  <a href="#">Centro de ajuda</a>
                 </li>
                 <li class="menu-itens">
-                  <a>Sair da Netflix</a>
+                  <a href="#">Sair da Netflix</a>
                 </li>
               </ul>
             </div>
-          
             <div #arrow id="arrow" data-popper-arrow></div>
         </div>
     </div>
-    <!-- <div id="dropdown-image" class="btn-group" ngbDropdown role="group" aria-label="Button group with nested dropdown">
-        <button class="btn" ngbDropdownToggle><img src="assets/img/gatinho.png" style="margin-right: 20px; color:blueviolet;" alt="icone"></button>
-        <div class="dropdown-menu" ngbDropdownMenu>
-          <button ngbDropdownItem class="button-box-img">            <img src="assets/img/gatinho.png" style="margin-right: 20px;" alt="icone">
-            One</button>
-          <button ngbDropdownItem class="button-box-img">            <img src="assets/img/gatinho.png" style="margin-right: 20px;" alt="icone">
-            Two</button>
-          <button ngbDropdownItem class="button-box-img">            <img src="assets/img/gatinho.png" style="margin-right: 20px;" alt="icone">
-            Four!</button>
-            <button ngbDropdownItem class="button-box-img">            <img src="assets/img/gatinho.png" style="margin-right: 20px;" alt="icone">
-                Four!</button>
-        </div>
-      </div> -->
 </div>
