--- a/src/app/components/template/header/menu/menu.component.html
+++ b/src/app/components/template/header/menu/menu.component.html
@@ -18,16 +18,16 @@
             <a [routerLink]="['/browse']" routerLinkActive="active-link">Início</a>
         </li>
         <li class="lista" >
-            <a [routerLink]="['/series']">Séries</a>
+            <a [routerLink]="['/series']" routerLinkActive="active-link">Séries</a>
         </li>
         <li class="lista">
-            <a [routerLink]="['/films']" >Filmes</a>
+            <a [routerLink]="['/films']" routerLinkActive="active-link">Filmes</a>
         </li>
         <li class="lista">
-            <a [routerLink]="['/latest']">Bombando</a>
+            <a [routerLink]="['/latest']" routerLinkActive="active-link">Bombando</a>
         </li>
         <li class="lista" >
-            <a [routerLink]="['/myList']">Minha lista</a>
+            <a [routerLink]="['/myList']" routerLinkActive="active-link">Minha lista</a>
         </li>
     </ul>
 </div>
