--- a/src/app/components/template/footer/footer.component.scss
+++ b/src/app/components/template/footer/footer.component.scss
@@ -9,8 +9,8 @@
     // padding: 10px 20px 10px 20px;
     // padding-right: 200px;
     // padding-bottom: 10px;
-    position: fixed;
-    bottom: 0;
+    // position: fixed;
+    // bottom: 0;
 
     .container-inner {
         max-width: 900px;
