--- a/src/app/components/template/header/menu-action/menu-action.component.scss
+++ b/src/app/components/template/header/menu-action/menu-action.component.scss
@@ -19,7 +19,7 @@
     // position: relative;
     border-radius: 0;
     // background-color: transparent;
-    background-color: black;
+    background-color: transparent;
     border: none;
     margin-top: 10px;
     margin-right:10px;
@@ -262,11 +262,19 @@
   margin-top: 20px;
   padding: 5px 10px 5px 5px;
   font-weight: normal;
+  a {
+    color: #fff;
+
+  }
 }
 
 .border-action-item {
   border-top: solid 1px rgba(255,255,255,.25);
   margin-top: 15px;
+  a {
+    color: #fff;
+
+  }
 }
 
 
