--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,8 @@
 
 
 html, body {
-    height:100%;
+    // height:100%;
+    background-color: #212529;
 }
 body {
     font-family: 'Roboto', sans-serif;
