--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,7 @@ html, body {
 body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
+    background-color: #212529;
 }
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
