--- a/src/app/components/profiles/manage/manage.component.scss
+++ b/src/app/components/profiles/manage/manage.component.scss
@@ -1,16 +1,28 @@
 .profiles {
-    max-width: 100%;
+    width: 100%;
     background: #141414;
+    height: 100%;
 }
 
 .font-profiles {
        text-align: center; 
        color: #fff;
        width: 100%;
-       font-size: 3vw;
-       font-weight: 500;
-       padding-top: 3.5em;
-       padding-bottom: 25px;
+       font-size: 3.5vw;
+       font-weight: unset;
+       padding-top: 2.5em;
+       margin-bottom: 0.67em;
+}
+
+.img-home{
+    width:100px;
+    margin-left: 30px; 
+}
+
+a {
+    margin-right: 30px;
+    display: inline-block;
+    text-decoration: none;
 }
 
 
@@ -26,15 +38,19 @@ ul {
     justify-content: center;  
 }
 .img-profiles {
-    width: 150px;
+    width: 190px;
     border-radius: 5px;
-    margin-right: 30px;
+}
+
+.name-profiles {
+    text-align: center;
+    color: #fff;
 }
 span {
     display: flex;
     flex-wrap: nowrap;
     flex-direction: row;
-    color: #fff;
+   
     margin-left: 20px;
 
 }
