--- a/src/app/components/profiles/manage/manage.component.scss
+++ b/src/app/components/profiles/manage/manage.component.scss
@@ -42,15 +42,51 @@ ul {
     border-radius: 5px;
 }
 
+// .img-profiles:hover {
+//     border-radius: 4px;
+//     border: .3em solid transparent;
+//     outline: 0;
+// }
+
+
 .name-profiles {
     text-align: center;
     color: #fff;
 }
-span {
-    display: flex;
-    flex-wrap: nowrap;
-    flex-direction: row;
-   
-    margin-left: 20px;
+// span {
+//     // display: flex;
+//     // flex-wrap: nowrap;
+//     // flex-direction: row;
+//     // margin-left: 20px;
+//     text-align: center;
+// }
 
+
+.profile-button {
+    display: block;
+    margin: 2em 0 1em 0;
+    font-size: 1.2vw;
+    border: 1px solid grey;
+    color: grey;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    cursor: pointer;
+    background-color: transparent;
+    padding: 8px 8px;
+    margin-left: 900px;
+    margin-right: 900px;
+    margin-top: 100px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background: #fff;
+    color: #000;
+    border: 1px solid #fff;
+    font-weight: 700;
+}
+
+.profile-button:focus, .profile-button:hover {
+    background: #c00;
+    border: 1px solid #c00;
+    color: #fff;
 }
