--- a/src/app/components/profiles/manage/manage.component.html
+++ b/src/app/components/profiles/manage/manage.component.html
@@ -1,12 +1,12 @@
 <div class="profiles">
-    <a href="#">
+    <a [routerLink]="['/browse']">
         <img src="assets/img/netflixx.png" class="img-home"alt="logo">
     </a>
     <div class="font-profiles">Gerenciar perfis:</div>
     <ul>
         <li>
-            <div *ngFor="let user of users" class="profiles-links">
-                <a href="#">
+            <div *ngFor="let user of users">
+                <a [routerLink]="['/browse']">
                     <img [src]="user.img"  class="img-profiles">
                     <div class="name-profiles">
                         {{ user.name }}
@@ -17,7 +17,7 @@
         </li>
     </ul>
     <div>
-        <a class="profile-button">Ok</a>    
+        <a [routerLink]="['/browse']"class="profile-button">Ok</a>    
     </div>
 </div>
 
