Criação da página navigation tab e inclusão de font no menu action

--- a/src/app/components/navigation-tab/navigation-tab.component.html
+++ b/src/app/components/navigation-tab/navigation-tab.component.html
@@ -1,1 +1,37 @@
-<p>navigation-tab works!</p>
+<div class="container-list">
+    <div class="title">
+        Minha lista
+    </div>    
+   <div class="card-list">
+        <div class="card-item">
+            <img src="assets/img/humano.jpg">
+        </div>
+        <div class="card-item"> 
+            <img src="assets/img/naruto.webp">
+        </div>
+        <div class="card-item">
+            <img src="assets/img/bill.jpg">
+        </div>
+        <div class="card-item">
+            <img src="assets/img/jobs.webp">
+        </div>
+        <div class="card-item">
+            <img src="assets/img/promised.webp">
+        </div>
+        <div class="card-item">
+            <img src="assets/img/mama.jpg">
+        </div>
+        <div class="card-item">
+            <img src="assets/img/bill.jpg">
+        </div>
+        <div class="card-item">
+            <img src="assets/img/jobs.webp">
+        </div>
+        <div class="card-item">
+            <img src="assets/img/promised.webp">
+        </div>
+        <div class="card-item">
+            <img src="assets/img/mama.jpg">
+        </div>
+   </div>
+</div>
