--- a/src/app/components/template/header/menu-action/menu-action.component.scss
+++ b/src/app/components/template/header/menu-action/menu-action.component.scss
@@ -1,65 +1,18 @@
-
-
-// .flex-container{
-//     display: flex;
-//     // padding: 10px 20px 10px 20px;
-//     background-color: #141414;
-//     width: 100%;
-//     flex-direction: row;
-//     /* justify-content: space-around; */
-// }
-
 .container-action {
     display: flex;
     width: 100%;
+    margin-right: 20px;
 }
 
 .button-action{
   button {
-    // position: relative;
     border-radius: 0;
-    // background-color: transparent;
     background-color: transparent;
     border: none;
     margin-top: 10px;
-    margin-right:10px;
-    // padding-top: 5px;
+    margin-right:30px;
 }
 }
-// img {
-//     vertical-align: middle;
-//     border-style: none;
-//     margin-left: 0px;
-   
-// }
-
-// ul {
-//     display: flex;
-//     flex-direction: row;
-//     align-items: flex-start;
-//     flex-grow: 1;
-//     width: 100%;
-//     a {
-//         text-decoration: none;
-//         color:#fff;
-//        padding: 5px 10px; 
-//        font-size:14px;
-//     }
-//     a:hover {
-//         color: #e5e5e5;
-//     }
-    
-//     .lista {
-//         color: #fff;
-//         list-style: none;
-//         margin-top:16px;
-//     }
-
-//     .active a{
-//         color: white;
-//         font-weight: 500;
-//     }
-// }
 
  .navigation-action{
     display: flex;
@@ -70,56 +23,6 @@
         padding: 5px 10px;
     }
 } 
-
-
-// .button-footer {
-//     border: none;
-//     background-color: transparent;
-//     outline: none;
-// }
-
-// .nav li {
-//     list-style: none;
-//     padding: 16px 0;
-// }
-
-// Menu Dropdown
-
-// .col {
-//     flex-basis: 0;
-//     flex-grow: 1;
-//     max-width: 100%;
-//     margin-top: 6px;
-
-// }
-
-// .btn-outline-primary {
-//     color: #fff !important;
-//     border-color: transparent !important;
-// }
-
-// .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active, .show > .btn-outline-primary.dropdown-toggle {
-//     color: #fff;
-//     background-color: transparent !important;
-//     border-color: transparent !important;
-// }
-
-// .btn-outline-primary:hover {
-//     color: #fff;
-//     background-color: transparent !important; 
-//     border-color: transparent !important;
-//     border: transparent !important;
-// }
-
-// .btn-outline-primary:focus, .btn-outline-primary.focus {
-//      box-shadow: none !important;
-// }
-
-// .btn-outline-primary {
-//     font-size: 11px;
-//     margin-top: 5px;
-// }
-
 
 .dropdown-item {
     display: block;
@@ -145,8 +48,6 @@
     text-align: center 
 }
 
-//dropdown image
-
 #dropdown-image .dropdown-toggle::after {
     display: inline-block;
     margin-left: 0.255em;
@@ -157,8 +58,6 @@
     border-bottom: 0;
     border-left: 0.3em solid transparent;
     color: #fff;
-
-   
 }
 
 .button-box-img {
@@ -167,22 +66,18 @@
 }
 
 
-//ndsnds
 
 #tooltip {
-    // background: #333;
     color: #fff;
     font-weight: bold;
     padding: 4px 8px;
     font-size: 13px;
-    // border-radius: 4px;
     height: auto;
     margin-right: 10px;
     width: 181px;
     background-color: rgba(0,0,0,.9);
     border: solid 1px rgba(255,255,255,.15);
     z-index: 1;
-    /* display: none; */
   }
 
   .list-button-action {
@@ -260,6 +155,7 @@
 
 .menu-action-item {
   margin-top: 20px;
+  margin-bottom: 12px;
   padding: 5px 10px 5px 5px;
   font-weight: normal;
   a {
@@ -268,12 +164,22 @@
   }
 }
 
+.menus{
+  padding-left: 0px;
+  padding-top: 12px;
+}
+
 .border-action-item {
   border-top: solid 1px rgba(255,255,255,.25);
-  margin-top: 15px;
   a {
     color: #fff;
 
+  }
+  img {
+    margin-right: 20px;
+  }
+  i {
+    color: #fff;
   }
 }
 
@@ -282,6 +188,25 @@ ul .menu-itens {
   padding-bottom: 5px;
   list-style: none;
   padding: 5px 10px 5px 5px;
+}
+
+i {
+  color: #fff;
+}
+
+img {
+  margin-right: 5px;
+  border-radius: 5px;
+}
+
+.fa-caret-down:hover {
+  color: #fff;   
+  transform: rotate(-180deg);
+  transition: all 200ms linear;
+}
+
+.fa-caret-down {
+  transition: all 200ms linear;
 }
 
 // Responsividade  
