--- a/src/app/components/template/header/header.component.html
+++ b/src/app/components/template/header/header.component.html
@@ -2,7 +2,7 @@
 <nav [ngClass]="{fundo: fundoFixo}" class="flex-container">
     <div class="header-logo">
         <a href="#">
-            <img src="assets/img/netflixx.png" width="90px" style="margin-left: 20px;" alt="logo">
+            <img src="assets/img/netflixx.png" class="logo" alt="logo">
         </a>
     </div>
     <div class="header-menu">
