--- a/src/app/components/template/header/menu-action/menu-action.component.scss
+++ b/src/app/components/template/header/menu-action/menu-action.component.scss
@@ -1,7 +1,7 @@
 .container-action {
     display: flex;
     width: 100%;
-    margin-right: 20px;
+    margin-right: 30px;
 }
 
 .button-action{
@@ -199,7 +199,8 @@ img {
   border-radius: 5px;
 }
 
-.fa-caret-down:hover {
+
+.fa-caret-down:active, .fa-caret-down:hover {
   color: #fff;   
   transform: rotate(-180deg);
   transition: all 200ms linear;
