--- a/src/app/components/template/header/header.component.scss
+++ b/src/app/components/template/header/header.component.scss
@@ -5,32 +5,25 @@
     width: 100%;
     flex-direction: row;
     position: fixed;
-    // max-width: 900px;
-    // padding: 0;
-    // margin: 0 auto;
     z-index: 1;
     &.fundo {
         background-color: #141414;
     }
 }
 
-
+.logo {
+    width: 110px;
+    margin-left: 55px;
+}
 
 img {
     vertical-align: middle;
     border-style: none;
     margin-left: 0px;
-   
 }
 
-.header-logo {
-
-}
 
 .header-menu {
     flex-grow: 1;
 }
 
-.header-actions {
-
-}
