Inclusão de imagens, texto e botões da página séries

--- a/src/app/components/series/series.component.html
+++ b/src/app/components/series/series.component.html
@@ -17,9 +17,18 @@
             </ul>
             </div>
         </div>
-        <div></div>
-        <div class="button-series-white"><a href="#"><i class="fa fa-play"></i>Assistir</a></div>
-        <div class="button-series-dark"><a href="#"><i class="fa fa-info-circle"></i>Mais informações</a></div>
+        <div class="button-series-white">
+            <a href="#"><i class="fa fa-play"></i>Assistir</a>
+        </div>
+        <div>
+            <img src="https://via.placeholder.com/650x260/ffffff/B0C4DE/?text=Filme" title="Nome de algum filme">
+        </div>
+        <div class="text-img">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum, odit voluptate.
+            Deleniti autem quisquam odit corporis illo porro consequatur delectus dolor.
+        </div>
+        <div class="button-series-dark">
+            <a href="#"><i class="fa fa-info-circle"></i>Mais informações</a>
+        </div>
  
     </div>
   
